# mal-tui

./: Cargo.toml  LICENSE  PKGBUILD
.github/workflows/: binaries.yaml  build.yaml
server/: Dockerfile
server/apt/: public.key
server/apt/dists/stable/: InRelease  Release  Release.gpg
server/apt/dists/stable/main/binary-amd64/: Packages
server/apt/dists/stable/main/binary-arm64/: Packages
server/apt/dists/stable/main/binary-armhf/: Packages
server/apt/dists/stable/main/binary-i386/: Packages
server/src/: main.rs
server/static/: index.html
src/: app.rs  main.rs
src/config/: README.md  player.rs
src/mal/: mod.rs  network.rs
src/mal/models/: anime.rs  user.rs
src/player/: fzf.rs  mod.rs  mpv.rs  video_player.rs
src/screens/: launch.rs  list.rs  login.rs  mod.rs  overview.rs  profile.rs  search.rs  seasons.rs
src/screens/widgets/: popup.rs  sync.rs
