[package]
name = "mal-tui"
version = "1.1.6"
edition = "2024"
default-run = "mal-tui"

[[bin]]
name = "mal-tui"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.97"
color-eyre = "0.6.3"
crossterm = {version = "0.29.0", features = ["serde"]}
image = {version = "0.25.6", features = ["gif"]}
ratatui = { version = "0.29.0", features = ["serde"] }
ratatui-image = "8.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
# tachyonfx = "0.13.0"
ureq = { version = "3.0.10", features = ["json"] }
tokio = { version = "1", features = ["full"] }
rouille = "3.6.2"
url = "2.5.4"
open = "5.3.2"
once_cell = "1.21.3"
chrono = "0.4.41"
cached = "0.56.0"
tui-widgets = "0.4.1"
regex = "1.11.1"
indexmap = "2.10.0"
toml = "0.9.7"
shell-escape = "0.1.5"
database = { path = "./deps/database" }
rusqlite = { version = "0.37.0", features = ["bundled"] }
openssl = { version = "0.10.78", features = ["vendored"] }
base64 = "0.22.1"
